docs: capture timing-sidechannel investigation and UDS-isolation architecture arc
Documents the full arc from pron98's r/java System.nanoTime challenge through
to a decided (not yet built) architecture: unconditional per-remote-principal
UDS process isolation for smart proxies and RemoteFunction filters, a client
that never loads real downloaded bytecode, dynamic cross-process permission
delivery via a new SubProcessDynamicPolicy component, and CPU-affinity
requirements closing the Prime+Probe residual after process isolation alone.

Reconciles this session's work against STD-009's earlier (2026-07-03)
"interface stripping"/"boomerang" and mobile-code-sidecar design, which
independently converged on much of the same architecture from a different
starting point (general foreign-code containment rather than timing
side-channels).

New: No-SM-Permanently-Ungated-Primitives.md, SOW-BAE-Timing-Sidechannel-Denial.md,
SOW-Smart-Proxy-Isolation-Architecture-Overview.md, SOW-SubProcessDynamicPolicy.md,
investigation-jeri-der-vs-jsonrpc-benchmark-scope.md.

Updated: JGDMS-STD-009 (additive cross-references only, no rewrite of its
substantive claims), SOW-Unix-Domain-Socket-JERI-Transport.md,
SOW-DirtyChai-Serialization-SPI-DER.md, SOW-Federated-Malicious-Digest-Registry.md.

Documentation only, no production code. Several items remain explicitly
undecided and are flagged as such in the docs themselves (filter wire format,
Rust-side spawning mechanics, jlink vs. native-image for the sidecar runtime).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>